--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <header>
         <div id="logo">
-          <a href="#">Your Name</a>
+          <a href="#">Bashir</a>
         </div>
         <nav>
           <ul>
