--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -68,7 +68,7 @@
           </p>
         </section>
         <div class="sidebar">
-          <p><img src="images/square200px.png" alt="Second" /></p>
+          <p><img src="images/square200px.png" alt="Some Other Picture" /></p>
           <h2>Contact Details</h2>
           <address>My Address</address>
           <p>
