--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"
     />
-    <title></title>
+    <title>Bashir :: Home</title>
     <link rel="stylesheet" href="styles/mobile.css" />
     <link
       rel="stylesheet"
@@ -35,7 +35,7 @@
           <h2>Welcome</h2>
           <p>
             <img
-              src="images/dishOne.jpg"
+              src="images/dishOne.jpg" alt="This is pic one"
               width="900"
               height="200"
               class="resize-img"
@@ -48,7 +48,7 @@
             well as mobile applications.
           </p>
           <p>
-            <img src="images/300x200.jpg" alt="First" class="left-float" />Lorem ipsum dolor
+            <img src="images/300x200.jpg" alt="Other picture" class="left-float" />Lorem ipsum dolor
             sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Ut enim ad minim
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
